<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.home.HomeFragment"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/txt_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/welcome_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"/>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/txt_hello"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="30dp"
            android:backgroundTint="@color/teal_700" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/search"/>
        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cr_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cv_search"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            android:clipToPadding="false"
            >

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/categories" />

            <TextView
                android:id="@+id/tv_view_all_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="3dp"
                android:clickable="true"
                android:focusable="true"
                android:textSize="15sp"
                android:textColor="@color/teal_700"
                android:text="@string/view_all" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_category"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="-20dp"
                android:layout_marginEnd="-20dp"
                android:paddingHorizontal="12dp"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/row_item_category"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cr_latest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cr_category"
            android:layout_marginTop="25dp"
            android:paddingHorizontal="20dp"
            android:clipToPadding="false"
            >

            <TextView
                android:id="@+id/tv_showing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/now_showing" />

            <TextView
                android:id="@+id/tv_view_all_showing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="3dp"
                android:clickable="true"
                android:focusable="true"
                android:textSize="15sp"
                android:textColor="@color/teal_700"
                android:text="@string/view_all" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_latest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_showing"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="-20dp"
                android:layout_marginEnd="-20dp"
                android:paddingHorizontal="12dp"
                android:clipToPadding="false"
                tools:listitem="@layout/row_item_movie"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cr_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cr_latest"
            android:layout_marginVertical="25dp"
            android:paddingHorizontal="20dp"
            android:clipToPadding="false"
            >

            <TextView
                android:id="@+id/tv_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/popular_movie" />

            <TextView
                android:id="@+id/tv_view_all_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="3dp"
                android:clickable="true"
                android:focusable="true"
                android:textSize="15sp"
                android:textColor="@color/teal_700"
                android:text="@string/view_all" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-20dp"
                android:layout_marginEnd="-20dp"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_popular"
                tools:listitem="@layout/row_item_movie" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cr_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cr_popular"
            android:layout_marginVertical="25dp"
            android:paddingHorizontal="20dp"
            android:clipToPadding="false"
            >

            <TextView
                android:id="@+id/tv_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/casts" />

            <TextView
                android:id="@+id/tv_view_all_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="3dp"
                android:clickable="true"
                android:focusable="true"
                android:textSize="15sp"
                android:textColor="@color/teal_700"
                android:text="@string/view_all" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-20dp"
                android:layout_marginEnd="-20dp"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="12dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cast"
                tools:listitem="@layout/row_item_cast" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>